<resources>
    <string name="app_name">محاسبه BMI</string>
    <string name="bmi_results">نتایج BMI</string>
    <string name="temp_bmi">15.25</string>
    <string name="temp_bmi_status">شما وزن طبیعی دارید</string>
    <string name="show_details">نمایش توضیحات</string>
    <string name="back_button">برگشت</string>
    <string name="bmi_calculator">محاسبه BMI</string>
    <string name="male">مرد</string>
    <string name="female">زن</string>
    <string name="height">قد</string>
    <string name="temp_height">170</string>
    <string name="weight">وزن</string>
    <string name="temp_weight">75</string>
    <string name="kg">کیلوگرم</string>
    <string name="age">سن</string>
    <string name="temp_age">25</string>
    <string name="let_s_begin">شروع کنیم</string>
    <string name="bmi_info">اطلاعات BMI</string>
    <string name="less_than_16">کمتر از 16</string>
    <string name="severely_underweight">کم وزنی شدید</string>
    <string name="underweight">کمبود وزن</string>
    <string name="underweight_range">16 تا 18.4</string>
    <string name="normal_range">18.5 تا 24.9</string>
    <string name="normal">طبیعی</string>
    <string name="overweight_range">25 تا 29.9</string>
    <string name="overweight">اضافه وزن</string>
    <string name="obese1_range">30 تا 34.9</string>
    <string name="obesity_class_i">چاقی کلاس I</string>
    <string name="obese2_range">35 تا 39.9</string>
    <string name="obesity_class_ii">چاقی کلاس II</string>
    <string name="obesity_class_iii">چاقی کلاس III</string>
    <string name="greater_than_40">بزرگتر از 40</string>
</resources>
