<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingTop="16dp"
    android:paddingRight="6dp"
    android:paddingBottom="6dp"
    tools:context=".ui.DetailsActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/back_button"
                    android:padding="10dp"
                    android:src="@drawable/ic_back_arrow" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </soup.neumorphism.NeumorphCardView>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bmi_info"
            android:textSize="16sp" />

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/info"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/back_button"
                    android:padding="8dp"
                    android:src="@drawable/ic_info" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </soup.neumorphism.NeumorphCardView>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/shareResult"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/bmiView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="12dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="@+id/minusHeight"
                app:layout_constraintEnd_toStartOf="@+id/minusHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:neumorph_shapeAppearance="@style/ShapeAppearance.Neumorph.CardView">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/RegularTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:includeFontPadding="false"
                        android:paddingEnd="8dp"
                        android:text="Your BMI"
                        android:textColor="@color/yourBmiColor"
                        android:textSize="14sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/detailBmiValue"
                        style="@style/RegularTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/helvetica_neue_light"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="24.53"
                        android:textColor="@color/infoColor"
                        android:textSize="30sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/detailStatus"
                        style="@style/RegularTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:includeFontPadding="false"
                        android:paddingStart="8dp"
                        android:text="Normal"
                        android:textColor="@color/yourBmiColor"
                        android:textSize="14sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </soup.neumorphism.NeumorphCardView>

            <soup.neumorphism.NeumorphCardView
                android:id="@+id/bmiRangeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="@+id/minusHeight"
                app:layout_constraintEnd_toStartOf="@+id/minusHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:neumorph_shapeAppearance="@style/ShapeAppearance.Neumorph.CardView">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:text="@string/less_than_16"
                            android:textColor="@color/yourBmiColor" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/severely_underweight" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#80BDBDBD" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:text="@string/underweight_range"
                            android:textColor="@color/yourBmiColor" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/underweight" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#80BDBDBD" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:text="@string/normal_range"
                            android:textColor="@color/yourBmiColor" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/normal" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#80BDBDBD" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:text="@string/overweight_range"
                            android:textColor="@color/yourBmiColor" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/overweight" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#80BDBDBD" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:text="@string/obese1_range"
                            android:textColor="@color/yourBmiColor" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/obesity_class_i" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#80BDBDBD" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:text="@string/obese2_range"
                            android:textColor="@color/yourBmiColor" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/obesity_class_ii" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#80BDBDBD" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:text="@string/greater_than_40"
                            android:textColor="@color/yourBmiColor" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/RegularTextStyle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/obesity_class_iii" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </soup.neumorphism.NeumorphCardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/shareResult"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:neumorph_backgroundColor="@color/colorSecondary">

        <com.google.android.material.textview.MaterialTextView
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/share_result"
            android:textAllCaps="false"
            android:textColor="@color/lightColor" />

    </soup.neumorphism.NeumorphCardView>

</RelativeLayout>