<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingTop="16dp"
    android:paddingRight="6dp"
    android:paddingBottom="6dp"
    tools:context=".ui.ResultsActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/back_button"
                    android:padding="10dp"
                    android:src="@drawable/ic_back_arrow" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </soup.neumorphism.NeumorphCardView>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bmi_results"
            android:textSize="16sp" />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/showDetails"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:orientation="vertical">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/bmiView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/minusHeight"
            app:layout_constraintEnd_toStartOf="@+id/minusHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearanceBMIView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circle_shape"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/circular_progress_bar" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvBmiValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/temp_bmi"
                    android:textSize="35sp" />

            </RelativeLayout>

        </soup.neumorphism.NeumorphCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBmiStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_bmi_status" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/showDetails"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        app:neumorph_backgroundColor="@color/colorSecondary">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/show_details"
            android:textAllCaps="false"
            android:textColor="#ffffff" />
    </soup.neumorphism.NeumorphCardView>

</RelativeLayout>